// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipDefinition should allow the user to specify the direction 1`] = `
<TooltipDefinition
  align="start"
  className="custom-class"
  direction="top"
  tooltipText="tooltip text"
>
  <div
    className="bx--tooltip--definition custom-class"
  >
    <button
      aria-describedby="definition-tooltip-2"
      aria-label="tooltip text"
      className="bx--tooltip__trigger bx--tooltip__trigger--definition bx--tooltip--top bx--tooltip--align-start"
    >
      tooltip trigger
    </button>
  </div>
</TooltipDefinition>
`;

exports[`TooltipDefinition should render 1`] = `
<TooltipDefinition
  align="start"
  className="custom-class"
  direction="bottom"
  tooltipText="tooltip text"
>
  <div
    className="bx--tooltip--definition custom-class"
  >
    <button
      aria-describedby="definition-tooltip-1"
      aria-label="tooltip text"
      className="bx--tooltip__trigger bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
    >
      tooltip trigger
    </button>
  </div>
</TooltipDefinition>
`;
